--- a/docs/basic_daily_attendance/hits-dashboard.mdx
+++ b/docs/basic_daily_attendance/hits-dashboard.mdx
@@ -3,14 +3,13 @@ title: How to implement basic daily attendance
 subtitle: Technical
 creator:
 - role: author
-  text: NSIP
+  text: NSIP team
 - role: editor
-  text: NSIP
-publisher: NSIP
-rights: © 2016 NSIP, TODO (License)
+  text: NSIP team
+publisher: National Schools Interoperability Program
+rights: © 2016 NSIP, licensed under [Apache 2.0](https://www.apache.org/licenses/LICENSE-2.0)
 abstract: |
-  Multi line abstract
-  Is here now
+  This article covers the elements of testing the basic daily attendance process using SIF 3.0 and the NSIP HITS testing service.
 ---
 
 include ../common/tech_preamble.md
